--- a/app/src/main/res/layout/fragment_video_landing.xml
+++ b/app/src/main/res/layout/fragment_video_landing.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -33,7 +31,7 @@
             app:srcCompat="@drawable/ic_account_login_header" />
 
 
-        <com.sm9i.eyemvvm.widget.vierpager.InterceptVerticalViewPager
+        <com.sm9i.eyemvvm.widget.viewpager.InterceptVerticalViewPager
             android:id="@+id/interceptVerticalViewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
