--- a/app/src/main/res/navigation/nav_landing.xml
+++ b/app/src/main/res/navigation/nav_landing.xml
@@ -1,5 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_landing">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_landing"
+    app:startDestination="@id/videoLandingFragment">
 
+    <fragment
+        android:id="@+id/videoLandingFragment"
+        android:name="com.sm9i.eyemvvm.ui.splash.VideoLandingFragment"
+        android:label="VideoLandingFragment" >
+        <action
+            android:id="@+id/action_videoLandingFragment_to_mainActivity"
+            app:destination="@id/mainActivity" />
+    </fragment>
+
+
+
+    <fragment
+        android:id="@+id/navigationEmptyFragment"
+        android:name="com.sm9i.eyemvvm.ui.splash.NavigationEmptyFragment"
+        android:label="NavigationEmptyFragment" >
+        <action
+            android:id="@+id/action_navigationEmptyFragment_to_videoLandingFragment"
+            app:destination="@id/videoLandingFragment" />
+        <action
+            android:id="@+id/action_navigationEmptyFragment_to_sloganFragment"
+            app:destination="@id/sloganFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/sloganFragment"
+        android:name="com.sm9i.eyemvvm.ui.splash.SloganFragment"
+        android:label="SloganFragment" >
+        <action
+            android:id="@+id/action_sloganFragment_to_mainActivity"
+            app:destination="@id/mainActivity" />
+    </fragment>
+
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.sm9i.eyemvvm.MainActivity"
+        android:label="activity_main"
+        tools:layout="@layout/activity_main" />
 </navigation>
